--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paletas de Cor Amarela para Casamento</title>
+    <title>Paletas de Cor Amarela para o Casamento</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Paletas de Cor Amarela para Casamento</h1>
+        <h1>Paletas de Cor Amarela para o Casamento</h1>
     </header>
     <div class="container">
         <div class="palette">
